2002-09-16  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	(Send_File): Send the Content-Type header in the chunked case. This
	 way browsers can display the progression during the download.
	 

2002-08-31  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-url.ads, aws-url.adb:
	(Protocol_Name): New routine.

2002-08-13  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-parameters-set.adb:
	(Add): Skip leading ? if present.

	* aws-parameters-set.ads:
	(Add): Add some documentation about '?' character. This is to be
	 compatible with AWS.URL.Paramaters.

2002-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	(Parse): Do not catch and throw Internal_Error it prevents
	 reporting proper info about exception location and nature.

	* aws-server.adb:
	(Shutdown): Properly release memory for Web_Server.Dispatcher. Fix
	 a memory leak.

2002-07-28  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	(Read_Binary_Message): Free memory if the connection is closed by
	 the peer.
	(Get_Response): Fix compilation error. Elements can't be a
	 constant.
	(Cleaner_Task): Fix typo in previous check-in.
	Minor reformatting.

2002-07-17  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	(Cleaner_Task): Use disconnect routine.
	Minor reformatting.

2002-07-15  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-url.ads:
	(Parameters): New procedure.
	Update comments.
	
	* aws-url.adb:
	(Parameters): New procedure.
	(Parse): Handler parameters.
	(Pathname): Add parameters to result.
	Minor reformatting.

2002-07-09  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server.ads, aws-server.adb:
	Minor reformatting and layout fix.

2002-07-09  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* aws-server.ads, aws-server.adb:
	(Set_Unexpected_Exception_Handler): New routine.
	Support for user defined unexpected exception handlers.

2002-07-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	(Answer_To_Client): Correctly set the peername in all cases.