@@ -1,3 +1,8 @@
+2002-09-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std.adb, aws-net-ssl.adb:
+	(Connect): Free memory and socket handle on connection failure.
+
 2002-09-16  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server-protocol_handler.adb:
